export class Questionnaire{
  constructor(
    public qn_id: Number,
    public qn_name: String,
    public qn_description: String
  ){}
}
