package at.htl.leosurvey.entities;

public enum QuestionType {
    SINGLECHOICE,
    MULTIPLECHOICE,
    YESORNO,
    FREETEXT
}
